# mangekyou-web

./: README.md
backstage/: Cargo.toml  package-lock.json  package.json
backstage/modele/: .gitignore
backstage/src/: chr.rs  llm_fwd.rs  llm_tok.rs  main.rs  state.rs  win32.rs
backstage/src/protocol/: gemini.rs  mangekyou.rs  mod.rs  openai.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: color-scheme.css  index.css  index.ts  mobius.ts  store.ts  util.ts
frontend/src/assets/prompts/: memory-user.xml  memory.xml  simulator-user-instruction.xml  simulator-user.example.xml  simulator.xml  status-bar-user.xml  status-bar.xml
frontend/src/assets/tomls/: harry-potter.chr.toml  islamic-magic.addon.toml  test_player.toml  test_simulator.toml
frontend/src/assets/tomls/blank/: README.md  player.chr.toml
frontend/src/assets/tomls/example/: example.addon.chr.toml  example.simulator.chr.toml
frontend/src/assets/tomls/harry-potter/: README.md  exam.addon.chr.toml  exam.addon.toml  hachimi.addon.chr.toml  (+14 more)
frontend/src/component/: ClickButton.vue  Dialog.vue  EditableMarkdown.vue  EditableText.vue  Row.vue  ToggleButton.vue  ToggleButtonGroup.vue
frontend/src/llm/: chat_message.ts  chr_file.rs  chr_file.ts  chrs.ts  context.ts  lang_config.ts  prompt_builder.ts
frontend/src/protocol/: http.ts  mangekyou.ts  openai.ts  ws.ts
frontend/src/ui/: App.vue  ChatBubble.vue  ChatConfig.vue  ChatPanel.vue  Config.vue  ConfigPanel.vue  NavBar.vue  StatusPanel.vue  WebSocketTest.vue
frontend/src/util/: check.ts
(+4 files in other folders)
