[package]
name = "mangekyou"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tokenizers = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = ["cors"] }
